# wikijs-cli

./: .gitignore  Cli.py  README.md  WikiJsApi.py  foo  introspectionSchema.json  pyproject.toml  query-example.md  requirements.txt  wikijs-cli  wikijs.py  wikijs.sh
WikiJsTools/: Cli.py  WikiJsApi.py  config.py  date.py  fuse.py  node.py  printer.py  query.py  sync.py  unicode.py
WikiJsTools/scripts/: cli.py  fuse.py
notes/: notes.md
