[project]
name = "wikijs-cli"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fusepy>=3.0.1",
    "prompt-toolkit>=3.0.52",
    "pyicu>=2.16",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
]

[tool.uv]
# or `uv.toml`
link-mode = "symlink"
